--- a/distributions/templates/distributions/index.html
+++ b/distributions/templates/distributions/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content=""
+      content="{{object.description}}"
     />
-    <title></title>
+    <title>{{object.name}}</title>
     <style>
     body {
         margin: 0;
